# tslib

./: .gitignore  BenchmarkHotel.java  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  README.md  ROADMAP.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
benchmarks/: README.md  build.gradle  compare.py
docs/: BENCHMARKING.md  BENCHMARK_RESULTS.md  MODEL_SELECTION_GUIDE.md  PHASE_11_RELEASE_CANDIDATE.md  RELEASE_CHECKLIST.md  TESTING_GUIDE.md  demo.sh  demo.tape
examples/: ArimaExample.java  ArimaxExample.java  AutoSelectionExample.java  BacktestExample.java  BenchmarkComparisonExample.java  DataQualityExample.java  Example01_DataIngestion.java  Example02_MovingAverages.java  Example03_DataQuality.java  Example04_Transformations.java  Example05_StationarityTests.java  Example06_ARIMAForecasting.java  Example07_ExponentialSmoothing.java  Example08_StateSpaceModels.java  Example09_VARModel.java  Example10_STLDecomposition.java  Example11_AutoSelection.java  Example12_Evaluation.java  Example13_Serialization.java  ForecastExample.java  GenerateBenchmarkReportExample.java  IntervalsExample.java  (+7 more)
tslib-py/: README.md  pyproject.toml
tslib-py/examples/: quickstart.py
tslib-py/tests/: conftest.py  test_client.py  test_integration.py
tslib-py/tslib/: __init__.py  _http.py  analyze.py  arima.py  client.py  data_quality.py  decomposition.py  diagnostics.py  ets.py  evaluation.py  exceptions.py  models.py  moving_average.py  selection.py  statespace.py  stationarity.py  transforms.py
tslib-py/tslib_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+246 files in other folders)
