[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tslib-py"
version = "0.1.0"
description = "Python client for the tslib time-series REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "responses>=0.23"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a live tslib-api server (set TSLIB_BASE_URL)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tslib*"]
